// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserSerializer : getAllUsers : should return array with info 1`] = `
{
  "data": [
    {
      "attributes": {
        "ava": null,
        "email": "111@11.1",
        "firstName": "aaaa",
        "lastName": "bbbb",
        "login": "Artem",
        "status": "1",
      },
      "id": "3",
      "type": "User",
    },
    {
      "attributes": {
        "ava": null,
        "email": "111@11.1",
        "firstName": "aaaa",
        "lastName": "bbbb",
        "login": "Artem",
        "status": "1",
      },
      "id": "1",
      "type": "User",
    },
  ],
  "links": {
    "self": "1",
  },
  "meta": {
    "countOfUsers": 2,
  },
}
`;

exports[`UserSerializer : getOne : should return info about user 1`] = `
{
  "data": {
    "attributes": {
      "ava": null,
      "email": "111@11.1",
      "firstName": "aaaa",
      "lastName": "bbbb",
      "login": "Artem",
      "status": "1",
    },
    "id": "1",
    "type": "User",
  },
  "links": {
    "self": "1",
  },
}
`;
